# rust

./: AGENTS.md  Cargo.toml  LICENSE-CC-BY-SA-4.0.md  LICENSE-MIT  LICENSE.md  README.md  ROADMAP.md
benches/: cache_aside.rs  flyweight.rs  singleton_resource_pool.rs
diagrams/: architecture.mmd  distributed-systems.mmd  gof.mmd  rust-idiomatic.mmd
plan/: catalogo-patrones-rust.md  estandar-rfc-0001.md
src/: lib.rs  patterns.rs
tests/: abstract_factory_database_connectors_test.rs  abstract_factory_payment_providers_test.rs  abstract_factory_ui_components_test.rs  actor_like_email_actor_test.rs  actor_like_inventory_actor_test.rs  actor_like_metrics_actor_test.rs  adapter_legacy_user_test.rs  adapter_logger_test.rs  adapter_payment_gateway_test.rs  bridge_notifications_test.rs  bridge_reports_test.rs  bridge_storage_test.rs  builder_http_server_config_test.rs  builder_search_query_test.rs  builder_transactional_email_test.rs  bulkhead_critical_isolation_test.rs  bulkhead_provider_pools_test.rs  bulkhead_resource_concurrency_limit_test.rs  cache_aside_invalidation_test.rs  cache_aside_read_through_test.rs  cache_aside_ttl_test.rs  catalog_structure_test.rs  chain_of_responsibility_content_moderation_test.rs  chain_of_responsibility_request_validation_test.rs  chain_of_responsibility_support_levels_test.rs  circuit_breaker_consecutive_failures_test.rs  circuit_breaker_half_open_recovery_test.rs  circuit_breaker_open_rejection_metrics_test.rs  clean_architecture_framework_independent_rules_test.rs  clean_architecture_presenter_test.rs  command_job_queue_test.rs  (+129 more)
(+332 files in other folders)
