[package]
name = "rust-design-patterns"
version = "0.1.0"
edition = "2024"
description = "Catálogo didáctico de patrones de diseño, patrones Rust idiomáticos y patrones de arquitectura."
license = "MIT OR Apache-2.0"

[lib]
name = "design_patterns_rust"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "cache_aside"
harness = false

[[bench]]
name = "flyweight"
harness = false

[[bench]]
name = "singleton_resource_pool"
harness = false
